Added functionality to several test files